# python-playwright-project

./: .gitignore  README.md  credentials.json  pyproject.toml  pytest.ini
pages/: home_page.py  login_page.py
support/: context.py  test_config.py
support/helpers/: gmail_client.py
test_data/: attachment.txt
tests/: conftest.py
tests/send_email/: send_email.feature  test_send_email.py
